@startuml

title __ACTIVITY's Class Diagram__\n

  namespace com.yyzy.constellation {
    namespace weather.activity {
      class com.yyzy.constellation.weather.activity.CityManagerActivity {
          - addImg : ImageView
          - backImg : ImageView
          - deleteImg : ImageView
          - listView : ListView
          - mData : List<DatabaseEntity>
          + onClick()
          + onKeyDown()
          # initData()
          # initLayout()
          # initView()
          # onResume()
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace weather.activity {
      class com.yyzy.constellation.weather.activity.DeleteCityActivity {
          - deleteCity : List<String>
          - dialog : AlertDialog
          - imgError : TextView
          - imgRight : TextView
          - listView : ListView
          - mData : List<String>
          + onClick()
          + onKeyDown()
          # initData()
          # initLayout()
          # initView()
          - showDialog()
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace weather.activity {
      class com.yyzy.constellation.weather.activity.MoreActivity {
          - back : ImageView
          - bgPref : SharedPreferences
          - layoutClear : RelativeLayout
          - layoutEnjoy : RelativeLayout
          - layoutUpdate : RelativeLayout
          - radioGroup : RadioGroup
          - versionName : String
          + onClick()
          + onKeyDown()
          # initData()
          # initLayout()
          # initView()
          # onResume()
          - clearData()
          - enjoyApp()
          - setRGListener()
          - showAlertDialog()
          - showLoadingDialog()
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace weather.activity {
      class com.yyzy.constellation.weather.activity.SearchCityActivity {
          ~ hotCity : String[]
          - adapter : ArrayAdapter<String>
          - city : String
          - etSearch : EditText
          - gv : GridView
          - imgBack : ImageView
          - imgSearch : ImageView
          + onClick()
          + onEditorAction()
          + onSuccess()
          # initData()
          # initLayout()
          # initView()
          - downKey()
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace weather.activity {
      class com.yyzy.constellation.weather.activity.WeatherActivity {
          - addCityImg : ImageView
          - bgNum : int
          - bg_pref : SharedPreferences
          - cityList : List<String>
          - fragmentList : List<Fragment>
          - imgBack : ImageView
          - imgList : List<ImageView>
          - moreImg : ImageView
          - pointLayout : LinearLayout
          - relativeLayout : RelativeLayout
          - viewPager : ViewPager
          + changeBg()
          + onClick()
          # initData()
          # initLayout()
          # initView()
          # onRestart()
          - initPager()
          - initPoint()
          - setPagerListener()
      }
    }
  }
  

  com.yyzy.constellation.weather.activity.CityManagerActivity .up.|> android.view.View.OnClickListener
  com.yyzy.constellation.weather.activity.CityManagerActivity -up-|> com.yyzy.constellation.activity.BaseActivity
  com.yyzy.constellation.weather.activity.CityManagerActivity o-- com.yyzy.constellation.weather.adapter.CityManagerAdapter : adapter
  com.yyzy.constellation.weather.activity.DeleteCityActivity .up.|> android.view.View.OnClickListener
  com.yyzy.constellation.weather.activity.DeleteCityActivity -up-|> com.yyzy.constellation.activity.BaseActivity
  com.yyzy.constellation.weather.activity.DeleteCityActivity o-- com.yyzy.constellation.weather.adapter.DeleteCityAdapter : adapter
  com.yyzy.constellation.weather.activity.MoreActivity .up.|> android.view.View.OnClickListener
  com.yyzy.constellation.weather.activity.MoreActivity -up-|> com.yyzy.constellation.activity.BaseActivity
  com.yyzy.constellation.weather.activity.SearchCityActivity .up.|> android.view.View.OnClickListener
  com.yyzy.constellation.weather.activity.SearchCityActivity .up.|> android.widget.TextView.OnEditorActionListener
  com.yyzy.constellation.weather.activity.SearchCityActivity -up-|> com.yyzy.constellation.activity.BaseActivity
  com.yyzy.constellation.weather.activity.WeatherActivity .up.|> android.view.View.OnClickListener
  com.yyzy.constellation.weather.activity.WeatherActivity -up-|> com.yyzy.constellation.activity.BaseActivity
  com.yyzy.constellation.weather.activity.WeatherActivity o-- com.yyzy.constellation.weather.adapter.CityFragmentPagerAdapter : adapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
